# sw_character_generator

./: .gitignore  README.md  ToDos.txt  final_player_character.json  last_player.json  main.py  pyproject.toml
src/: main.py
src/gui/: app.py
src/sw_character_generator/: main.py
src/sw_character_generator/blubb/: testdatei.py
src/sw_character_generator/classes/: Fighter.py  assassin.py  character.py  elf.py  fighter.py  halfling.py  inventory.py  item.py  mainstat.py  playerCharacter.py  player_enums.py  playerclass.py  professions.py  races.py  stat_enums.py  thief.py  wizard.py
src/sw_character_generator/classes/_old_keep/: assassin.py  cleric.py  druid.py  fighter.py  monk.py  paladin.py  profession.py  ranger.py  (+2 more)
src/sw_character_generator/cli/: commands.py
src/sw_character_generator/core/: models.py  persistence.py  services.py
src/sw_character_generator/data/: Buch1.csv  Buch1.xlsx  itemdb.json
src/sw_character_generator/functions/: character_handling.py  choosen_alignment.py  choosen_profession.py  choosen_race.py  create_character.py  genCharStatMods.py  gen_char_stat_mods.py  manage_ac.py  manage_coins.py  manage_hp.py  manage_items.py  manage_magic.py  manage_saving_throw.py  manage_thief_skills.py  manage_xp.py  modify_hp.py  roleDice.py  role_dice.py  save_character.py  update_base_stats.py  update_derived_stats.py
src/sw_character_generator/gui/: README.md  __init__.py  app copy.py  app.py  role_stats.py  widgets.py
src/sw_character_generator/utility/: linux_fullscreen.py
sw_character_generator/gui/: README.md  __init__.py  app.py
(+40 files in other folders)
